jni-macros/tests/ui/bind_java_type/fail/is_instance_of_jobject.stderr
error: JObject should not be explicitly specified in is_instance_of - all types are already instances of JObject
 --> tests/ui/bind_java_type/fail/is_instance_of_jobject.rs:8:9
  |
8 |         JObject,
  |         ^^^^^^^
